# SoFiA

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  README.md  package.json  pnpm-lock.yaml
apps/backend/: package.json  pyproject.toml
apps/backend/benchmarking/: analysis.ipynb  dataset.jsonl  run_benchmark.py
apps/backend/benchmarking/base_data/: categories.json
apps/backend/benchmarking/utils/: db_setup.py  evaluation.py  ui.py
apps/backend/scripts/: create_db.py
apps/backend/src/: create_db.py  main.py
apps/backend/src/api/v1/: api.py
apps/backend/src/api/v1/endpoints/: categories.py  health.py  transactions.py
apps/backend/src/database/: connection.py  models.py
apps/backend/src/db/crud/: crud_category.py  crud_transaction.py
apps/backend/src/db/database/: connection.py
apps/backend/src/db/models/: models.py
apps/backend/src/db/schemas/: transaction.py
apps/backend/src/llm/: factory.py  interface.py
apps/backend/src/llm/DummyLLM/: dummy_llm.py
apps/backend/src/llm/LocalLLM/: local_llm.py
apps/backend/src/llm/RemoteLLM/: remote_llm.py
